fix: token expiration