@@ -5,6 +5,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,6 +20,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -34,24 +36,18 @@ public class SecurityConfig {
   }
 
   @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-    return httpSecurity
-        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    return http.cors(Customizer.withDefaults())
         .csrf(AbstractHttpConfigurer::disable)
         .sessionManagement(
             session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
         .authorizeHttpRequests(
             auth ->
-                auth.requestMatchers(
-                        HttpMethod.POST, "/auth/login", "/auth/refresh", "/auth/logout")
+                auth.requestMatchers(HttpMethod.POST, "/auth/login")
                     .permitAll()
-                    .requestMatchers(HttpMethod.POST, "/users")
+                    .requestMatchers(HttpMethod.POST, "/auth/refresh")
                     .permitAll()
-                    .requestMatchers(HttpMethod.GET, "/users/**")
-                    .hasRole("ADMIN")
-                    .requestMatchers(HttpMethod.PUT, "/users/**")
-                    .hasRole("ADMIN")
-                    .requestMatchers(HttpMethod.DELETE, "/users/**")
+                    .requestMatchers("/users/**")
                     .hasRole("ADMIN")
                     .anyRequest()
                     .authenticated())
@@ -62,12 +58,11 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost")); // Permitted origins
-    configuration.setAllowedMethods(
-        List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")); // Permitted methods
-    configuration.setAllowedHeaders(List.of("Authorization", "Content-Type")); // Permitted headers
-    configuration.setExposedHeaders(List.of("Authorization")); // Headers to be exposed
-    configuration.setAllowCredentials(true); // Permit credentials
+    configuration.setAllowedOrigins(Collections.singletonList("*"));
+    configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+    configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+    configuration.setExposedHeaders(List.of("Authorization"));
+    configuration.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
